tests/fail/import_leak_b.tk
// tests/fail/fail_import_leak_b.tk
// No import of test_import_leak_a

fn main() {
    // EXPECT: error[E0402]: Use of undeclared identifier 'leaked_func'
    leaked_func()
    return
}
